# ds-c

./: .gitignore  AUTHORS  README  configure.ac
src/: Makefile.am  ds.h  dsdemo.c  linkedlist.h  queue.c  queue.h  slist.c  slist.h  sllist.c  sllist.h  stack.c  stack.h
tests/: Makefile.am  check_linkedlist.c  check_queue.c  check_slist.c  check_sllist.c  check_stack.c
